log
Thu 24 Aug 2023 08:09:53 PM UTC: 
 tests:  0|6
total_score: 0/70
1e0a8b8
Thu 24 Aug 2023 08:17:17 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f4fc11b
Thu 24 Aug 2023 08:19:18 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/time.h:29,
                 from test.c:4:
list.c: In function ‘createList’:
list.c:34:11: error: expected identifier before ‘(’ token
   34 |   list -> NULL;
      |           ^~~~
In file included from test.c:5:
list.c:35:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |   list -> size = 0;
      |        ^~
Compilation failed
5e52280
